--- a/hibret-front-main/package.json
+++ b/hibret-front-main/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-router": "^1.22.3",
     "axios": "^1.6.8",
+    "payload": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^4.5.2"
