--- a/hibret-main/package.json
+++ b/hibret-main/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nanoid": "^5.0.6",
     "payload": "^2.0.0"
   },
   "devDependencies": {
