--- a/hibret-main/package.json
+++ b/hibret-main/package.json
@@ -20,6 +20,8 @@
     "@payloadcms/db-mongodb": "^1.0.0",
     "@payloadcms/plugin-cloud": "^3.0.0",
     "@payloadcms/richtext-slate": "^1.0.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
