--- a/hibret-main/package.json
+++ b/hibret-main/package.json
@@ -25,7 +25,10 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "payload": "^2.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "payload": "^2.0.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
