added dynamic form inputs

--- a/hibret-front-main/package.json
+++ b/hibret-front-main/package.json
@@ -12,26 +12,26 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/devtools": "^4.3.1",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.15",
-
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-
     "@mui/x-data-grid": "^7.2.0",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-router": "^1.22.3",
     "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "payload": "^2.12.1",
     "quill": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-
-    "styled-components": "^6.1.8",
-
     "react-dropdown": "^1.11.0",
-
+    "react-hook-form": "^7.51.4",
     "react-quill": "^2.0.0",
-
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
