--- a/hibret-front-main/package.json
+++ b/hibret-front-main/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "payload": "^2.12.1",
     "quill": "^2.0.0",
     "react": "^18.2.0",
