--- a/hibret-front-main/package.json
+++ b/hibret-front-main/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.2.0",
+    "@tanstack/react-location": "^3.7.4",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-router": "^1.22.3",
     "@tanstack/react-table": "^8.16.0",
@@ -41,6 +42,7 @@
     "@tanstack/router-vite-plugin": "^1.20.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
