--- a/hibret-front-main/package.json
+++ b/hibret-front-main/package.json
@@ -18,6 +18,8 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.2.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-router": "^1.22.3",
     "@tanstack/react-table": "^8.16.0",
@@ -25,11 +27,13 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "payload": "^2.12.1",
+    "pdfjs-dist": "^4.2.67",
     "quill": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.51.4",
+    "react-pdf": "^8.0.2",
     "react-quill": "^2.0.0",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0",
