--- a/hibret-front-main/package.json
+++ b/hibret-front-main/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.2.0",
+    "@mui/x-date-pickers": "^7.5.0",
     "@tanstack/react-location": "^3.7.4",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-router": "^1.22.3",
@@ -25,12 +26,14 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "mui-react-hook-form-plus": "^1.5.1",
     "payload": "^2.12.1",
     "quill": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.51.4",
+    "react-multi-select-component": "^4.3.4",
     "react-quill": "^2.0.0",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0",
