--- a/hibret-front-main/package.json
+++ b/hibret-front-main/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
     "react-multi-select-component": "^4.3.4",
     "react-quill": "^2.0.0",
     "styled-components": "^6.1.8",
