--- a/hibret-front-main/package.json
+++ b/hibret-front-main/package.json
@@ -25,18 +25,21 @@
     "@tanstack/react-router": "^1.22.3",
     "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "mui-react-hook-form-plus": "^1.5.1",
     "payload": "^2.12.1",
     "quill": "^2.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
     "react-multi-select-component": "^4.3.4",
     "react-quill": "^2.0.0",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
